2009-09-02  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Make CodebookForm a successor of FoldableForm.

2009-09-02  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Fix menu title editing.

2009-09-02  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/evaction.py:
	Add question mark to identifier characters in evaction parsing.

2009-09-01  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Column `description' added to menu rights editing.

2009-09-01  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	* lib/pytis/form/list.py:
	Set default sorting after sorting is set to empty in FoldableForm.

2009-09-01  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Fix initial sorting for non-foldable forms in FoldableForm.

2009-09-01  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	* lib/pytis/presentation/spec.py:
	Cleanup of passing initial folding specifications.

2009-09-01  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	* lib/pytis/form/list.py:
	Determine default sorting of FoldableForms automatically.

2009-09-01  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/types_.py:
	Don't display terminal node marks in foldable columns when folding is disabled.

2009-08-31  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Set title for separators in the menu editing form.

2009-08-31  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	Minor update of DmpDb documentation.

2009-08-31  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	New genmenu command line option --check-update.

2009-08-31  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* tools/genmenu.py:
	Add labels to non-menu actions in DMP forms.

2009-08-31  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Remove forgotten redundant condition from db_pytis_menu.py.

2009-08-31  Milan Zamazal  <pdm@brailcom.org>
